==簡単な変更履歴のログです。

==11/26
先ず以下4ファイルを教本に従いコーディングしました。ほぼ写経です。
-Lox.java
-Scanner.java
-Token.java
-TokenType.java

==12/03
自分向けのメモも兼ねてりどみ代わりのadocを足しておくことにしました。
ディレクトリの指定が面倒なので、実行用のバッチファイルを追加しています。相対パス指定なので、構造がそのままであれば実行できるかと思います。
-ChangeLog.adoc
-loxrun.bat (ディレクトリ最上層にあります)

==12/10
BNF記法の練習 教本にあるbreakfast.bnfを写経
[https://bottlecaps.de/rr/ui]で図で表示・これをxhtmlでダウンロードした。
こういった細かいファイルをどかしておくためにAnyディレクトリを作成した。
batファイルの引数指定がズレまくっていたので修正
-Any(dir)
-breakfast.bnf
-diagram.xhtml(download)
-loxrun.bat(fix)